--- a/kontakt.html
+++ b/kontakt.html
@@ -50,6 +50,13 @@
             <h1>Impressum</h1>
 
             <p>&nbsp;</p>
+            <h2 style="color: red;">Hinweis: Quatschkatzenbaum (und somit auch das folgende Impressum)
+		ist eine satirische, rein private, nicht-kommerzielle Übungs- und Test-Seite 
+	        (und benötigt daher kein wirkliches Impressum). Wenn sie dem Ersteller dennoch
+	        eine Nachricht hinterlassen wollen, benutzen sie bitte
+		<a href="https://tilokrohn.de/mailformular.php">dieses Formular</a>.
+	    </h2>
+	    <p>&nbsp;</p>
             
             <h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
             <p>Quatsch Katzenbaum<br />
