--- a/kontakt.html
+++ b/kontakt.html
@@ -110,7 +110,7 @@
 		<footer>
             <p>  
 				<a href="kontakt.html">Impressum</a> |
-				<a href="datenschutz.html">Datenschutz</a> |
+				<a href="datenschutz.html">Datenschutz</a>
 	            
 	            <!-- Alles Quatsch! -->
 	        </p>
